2007-11-20  Naba Kumar  <naba.kumar@gnome.org>

	* plugins/Makefile.am: Remove duplicate 'profiler' in SUBDIRS.

	Icons from tpgww@onepost.net:
	* pixmaps/Makefile.am:
	* src/Makefile.am:
	* src/anjuta-app.c:
	* src/anjuta-preferences-general.svg:

	Icons from patch in bug #480093 comment #23. Also renamed icons.
	To be continued..

2007-11-19  Naba Kumar  <naba.kumar@gnome.org>

	Icons from tpgww@onepost.net:
	* plugins/debug-manager/images/Makefile.am:
	* plugins/debug-manager/images/anjuta-watch.svg:
	* plugins/debug-manager/plugin.c: (register_stock_icons):
	* plugins/gdb/images/Makefile.am:
	* plugins/gtodo/Makefile.am:
	* plugins/gtodo/anjuta-gtodo-plugin.svg:
	* plugins/gtodo/anjuta-gtodo.plugin.in:
	* plugins/gtodo/interface.c: (stock_icons):
	* plugins/gtodo/main.h:
	* plugins/gtodo/plugin.c: (ipreferences_merge):
	* plugins/terminal/Makefile.am:
	* plugins/terminal/anjuta-terminal-plugin.svg:
	* plugins/terminal/anjuta-terminal.plugin.in:
	* plugins/terminal/terminal.c:
	* plugins/tools/Makefile.am:
	* plugins/tools/anjuta-tools-plugin.svg:
	* plugins/tools/anjuta-tools.plugin.in:
	* plugins/tools/plugin.c:
	* plugins/valgrind/Makefile.am:
	* plugins/valgrind/anjuta-valgrind-plugin.svg:
	* plugins/valgrind/anjuta-valgrind.plugin.in:
	* plugins/valgrind/plugin.c: (register_stock_icons),
	(ipreferences_merge):

	Icons from patch in bug #480093 comment #23. Also renamed icons.
	To be continued..

2007-11-18  Massimo Cora'   <maxcvs@email.it>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* configure.in:
	required gda version to 3.1.3. [svn trunk]. Without this Anjuta can crash
	due to bug #493360. Still present anyway bug #495843

	* plugins/symbol-db/plugin.c: (goto_local_tree_iter),
	(goto_global_tree_iter), (on_treesearch_symbol_selected_event),
	(on_local_treeview_row_activated),
	(on_global_treeview_row_activated),
	(on_global_treeview_row_expanded), (on_project_element_added),
	(on_project_element_removed), (project_root_added),