@@ -1,5 +1,17 @@
 2007-11-20  Naba Kumar  <naba.kumar@gnome.org>
 
+	Patch from James Liggett:
+	* plugins/subversion/anjuta-subversion.glade:
+	* plugins/subversion/subversion-diff-dialog.c:
+	(on_subversion_diff_response), (subversion_diff_dialog):
+	* plugins/subversion/subversion-diff-dialog.h:
+
+	The diff dialog should have a checkbox, enabled by default, that
+	allows the user to make sure that all open files are saved before
+	diffing.
+
+2007-11-20  Naba Kumar  <naba.kumar@gnome.org>
+
 	* plugins/Makefile.am: Remove duplicate 'profiler' in SUBDIRS.
 
 	Icons from tpgww@onepost.net:
